syntax = "proto3";

package friend;

option go_package = "/friend";

message AddFriendRequest {
  int64 userId = 1;
  int64 friendId = 2;
}

message AddFriendResponse {
  bool success = 1;
}

message GetFriendsRequest {
  int64 userId = 1;
}

message GetFriendsResponse {
  repeated int64 friendIds = 1;
}

service Friend {
  rpc AddFriend(AddFriendRequest) returns (AddFriendResponse) {}
  rpc GetFriends(GetFriendsRequest) returns (GetFriendsResponse) {}
}