syntax = "proto3";

package user;

option go_package = "/user";

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 userId = 1;
  string username = 2;
  bool success = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string username = 1;
  int64 userId = 2;
  bool success = 3;
  string token = 4;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool valid = 1;
  int64 userId = 2;
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc ValidateJWT(ValidateRequest) returns (ValidateResponse) {}
}